# Wind-Turbine-Fault-Detection

./: CARE_data_fault_detection.ipynb  Makefile  README.md  environment.yml  pyproject.toml  wind_turbine_fault_detection.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01_CARE_data_fault_detection.ipynb  0.02_wind_turbine_fault_detection.ipynb  CARE_data_fault_detection.ipynb
wind_turbine_fault_detection/: __init__.py  data_processing(depreciated).py  dataset.py  features.py  plots.py
wind_turbine_fault_detection/modeling/: train.py
wind_turbine_fault_detection_and_prediction/: __init__.py  dataset.py  features.py  plots.py
wind_turbine_fault_detection_and_prediction/modeling/: predict.py
