[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wind_turbine_fault_detection"
version = "0.0.1"
description = "To use machine learning to classify wind turbine data as faulty or not in order to assist in preventative maintenance."
authors = [
  { name = "Nehemiah Solis" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["wind_turbine_fault_detection"]
force_sort_within_sections = true
